[gd_scene load_steps=9 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Node_mundo.gd" type="Script" id=2]
[ext_resource path="res://roca.tscn" type="PackedScene" id=3]
[ext_resource path="res://CanvasLayer_interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites chafas/Strip And GIF/space7_4-frames.png" type="Texture" id=5]
[ext_resource path="res://Sonidos/Megaman_Trim.vwa (online-audio-converter.com).wav" type="AudioStream" id=6]
[ext_resource path="res://Sonidos/se-compran-colchones-mike-fortu-remix (online-audio-converter.com).ogg" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.00031805, 0.00377798, 0, 0, 0, 0, 639.999, 0.0133648, 0, 0, 0, 0, 640.012, 959.994, 0, 0, 0, 0, 0.0037446, 959.916, 0, 0, 0, 0, 0.00738621, 0.0185504, 0, 0, 0, 0, 0.00031805, 0.00377798 )
}

[node name="Node_mundo" type="Node"]
script = ExtResource( 2 )
roca = ExtResource( 3 )

[node name="TextureRect_fondo" type="TextureRect" parent="."]
margin_right = 642.0
margin_bottom = 957.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 299.581, 289.722 )

[node name="roca_timer" type="Timer" parent="."]
wait_time = 0.8

[node name="score_timer" type="Timer" parent="."]

[node name="inicio_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Position2D_inicio" type="Position2D" parent="."]
position = Vector2( 320, 480 )

[node name="Path2D_margen" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D_rocaP" type="PathFollow2D" parent="Path2D_margen"]
position = Vector2( 0.00031805, 0.00377798 )
rotation = 1.49795e-05

[node name="CanvasLayer_interfaz" parent="." instance=ExtResource( 4 )]

[node name="Audio_Game_Over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Audio_MusicaFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="golpe" from="player" to="." method="Game_over"]
[connection signal="timeout" from="roca_timer" to="." method="_on_roca_timer_timeout"]
[connection signal="timeout" from="score_timer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="inicio_timer" to="." method="_on_inicio_timer_timeout"]
[connection signal="iniciar_juego" from="CanvasLayer_interfaz" to="." method="nuevo_juego"]
